@@ -1,0 +1,28 @@
+#ifndef ORDINALCCPP_H
+#define ORDINALCCPP_H
+
+#include <RcppArmadillo.h>
+#include <math.h>
+#include <vector>
+#include <pbv.h>
+#include <cmath>
+
+// [[Rcpp::depends(RcppArmadillo)]]
+using namespace Rcpp;
+using namespace arma;
+
+arma::sp_mat kronecker_I_X(
+    const arma::mat& X,
+    int n
+);
+
+arma::sp_mat kronecker_X_I(
+    const arma::mat& X,
+    int n
+);
+
+arma::sp_mat kronecker_diag(
+    arma::sp_mat X
+);
+
+#endif
