@@ -12,6 +12,7 @@
 using namespace Rcpp;
 using namespace arma;
 
+// I kron X
 // [[Rcpp::export]]
 arma::sp_mat kronecker_I_X(
   const arma::mat& X,
@@ -40,6 +41,7 @@ arma::sp_mat kronecker_I_X(
   return(res);
 }
 
+// X kron I
 // [[Rcpp::export]]
 arma::sp_mat kronecker_X_I(
     const arma::mat& X,
@@ -67,3 +69,28 @@ arma::sp_mat kronecker_X_I(
   
   return(res);
 }
+
+// Kron of diagonal matrix with itself:
+// [[Rcpp::export]]
+arma::sp_mat kronecker_diag(
+  arma::sp_mat X
+){
+  int i,j;
+  
+  // Size of X:
+  int n = X.n_rows;
+
+  // return matrix:
+  arma::sp_mat res = sp_mat(n*n,n*n);
+  
+  for (i=0; i<n; i++){
+    for (j=0; j<n; j++){
+      res(i*n + j, i*n + j) = X(i,i) * X(j,j);
+    }
+  }
+  
+  return(res);
+}
+
+
+
